test/expected/explain_udc_a4i.out
explain operator A4()
                 ^
18: error: user-defined conversion operator return type "A4" (aka, "int[4]") can not be an array; did you mean pointer to array?
